# sleep-lecturer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  flake.nix  fly.toml  run-local
backend/: .env.example  pyproject.toml
backend/app/: config.py  generate_audio.py  generate_text.py  main.py  session.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  api.ts
frontend/src/components/: AudioPlayer.module.css  AudioPlayer.tsx  TopicForm.module.css  TopicForm.tsx
frontend/src/hooks/: useAudioQueue.ts
